--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: run custom code
+        run: echo arihant jain
   
 
       # Runs a set of commands using the runners shell
