--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
         run: echo Hello, world!
 
       - name: run custom code
-        run: echo arihant jain
+        run: echo KEY
+        env:
+          KEY: ${{ secrets.KEY }}
   
 
       # Runs a set of commands using the runners shell
