--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,7 @@ jobs:
         run: echo Hello, world!
 
       - name: run custom code
-        run:
-          if[ "$KEY" == "A9C3light"]
-          then
-            echo "got secret!"
-          fi
+        run: echo $KEY
         env:
           KEY: ${{ secrets.KEY }}
   
