--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: run custom code
         run: echo $KEY
         env:
+          message: "starting message"
           KEY: ${{ secrets.KEY }}
   
 
